# elt_pipeline_ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: elt_k12_dag.py
dashboard-app/: package-lock.json
dashboard-app/src/: App.jsx
dbt_project/elt_k12/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/elt_k12/models/marts/: mart_assessment_trends.sql  mart_enrollment_summary.sql
dbt_project/elt_k12/models/staging/: schema.yaml  sources.yml  stg_assessments.sql  stg_enrollment.sql
dbt_project/elt_k12/seeds/: raw_assessments.csv  raw_enrollment.csv
extract/: extract_transform.py
llm/: explainer.py
load/: load_data.py
